--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-react-css-modules": "^5.2.6",
+    "moment": "^2.29.4",
     "posthtml": "^0.16.6",
     "posthtml-css-modules": "^0.1.3",
     "prop-types": "^15.8.1",
